--- a/src/Components/senha.css
+++ b/src/Components/senha.css
@@ -41,11 +41,12 @@ h1 {
   color: white;
   width: 50%;
   padding: 12px;
-  margin-left: 39%;
+  margin-left: 24%;
   border-radius: 10px;
   border: none;
   font-family: sans-serif;
   text-decoration: none;
+  margin-top: -15%;
 }
 
 .container1 {
@@ -89,4 +90,14 @@ button:active {
   margin-top: -2px;
   font-size: 13px;
   font-family: sans-serif;
+}
+
+.text {
+  margin-top: 4%;
+  text-decoration: none;
+  margin-left: 15%;
+  
+}
+.teste {
+  color: #0000;
 }
